fixed layout misalignment

--- a/src/components/sidebar/SideBar.css
+++ b/src/components/sidebar/SideBar.css
@@ -21,7 +21,7 @@
 .collase-sidebar-container{
     padding: 14px 12px;
     height: 97%;
-    width: 72%;
+    /* width: 72%; */
 }
 
 
