--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
+  height: 100vh;
+  width: 100vw;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
