--- a/src/pages/dashboard/dashBoard.css
+++ b/src/pages/dashboard/dashBoard.css
@@ -190,7 +190,7 @@
 
 @media screen and (max-width: 870px){
     .dashboard-mainContainer{
-        grid-template-columns: 1fr ;
+        grid-template-columns: 100% ;
         /* grid-template-rows: auto auto auto auto; */
         grid-template-rows: auto auto auto auto auto auto auto auto;
     }
